--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <p>This is a paragraph.</p>
 <p>This is another paragraph.</p>
-<p>This is a main branch.</p>
+<p>This is a dev branch.</p>
 
 </body>
 </html>
