--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <p>This is a paragraph.</p>
 <p>This is another paragraph.</p>
 <p>This is a dev branch.</p>
+<p>Setup YAML files</p>
 
 </body>
 </html>
